<resources>
    <string name="app_name">OpenTrivia</string>
    <string name="trivia_crack">Trivia Crack</string>
    <string name="gioca">Gioca</string>
    <string name="desc" />
    <string name="Accedi_con_Google">Accedi con Google</string>
    <string name="Accedi_con_Facebook">Accedi con Facebook</string>
    <string name="category">Categoria</string>
    <string name="modalita">Seleziona la modalità di gioco</string>
    <string name="Difficolta">Seleziona la difficoltà delle domande</string>
    <string name="difficile">DIFFICILE</string>
    <string name="facile">FACILE</string>
    <string name="medio">MEDIO</string>
    <string name="casuale">Avversario casuale</string>
    <string name="classica">CLASSICA</string>
    <string name="argomento">ARGOMENTO SINGOLO</string>
    <string name="tempo">TEMPO REALE</string>
    <string name="avversario">Cerca un avversario</string>
    <string name="start">Inizia partita</string>
    <string name="facebook_application_id" translatable="false">1379219505984377</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1379219505984377</string>
    <string name="facebook_client_token">c9af781f4f2845ad49f129f4a88d2933</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inizia">Inizia</string>
    <string name="nome_avversario">Nome avversario</string>
    <string name="zero">0</string>
    <string name="trattino">-</string>
    <string name="inattesa">In attesa</string>
    <string name="Partite_terminate">Partite terminate </string>
    <string name="amico">amico</string>
    <string name="geografia">Geografia</string>
    <string name="sport">Sport</string>
    <string name="arte">Arte</string>
    <string name="intrattenimento">Intrattenimento</string>
    <string name="scienze">Scienze</string>
    <string name="storia">Storia</string>
    <string name="statistiche">Statistiche</string>
    <string name="Modalita">Modalità</string>
    <string name="storia_40">Storia n/d</string>
    <string name="geografia_50">Geografia n/d</string>
    <string name="arte_60">Arte n/d</string>
    <string name="sport_70">Sport n/d</string>
    <string name="intrattenimento_80">Intrattenimento n/d</string>
    <string name="scienze_100">Scienze n/d</string>
    <string name="argomento_percentuale"> %1$s %2$s%% </string>
    <string name="ritirato">Ritirato</string>

</resources>