<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistiche"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/subject1"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/storia"
        android:background="@drawable/rounded_border_background"
        android:textSize="25sp"
        android:textColor="#99000000"
        android:gravity="center"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/subject2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/geografia"
        android:background="@drawable/rounded_border_background"
        android:textSize="25sp"
        android:textColor="#99000000"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/subject1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/subject3"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/arte"
        android:background="@drawable/rounded_border_background"
        android:textSize="25sp"
        android:textColor="#99000000"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/subject2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/subject4"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/sport"
        android:background="@drawable/rounded_border_background"
        android:textSize="25sp"
        android:textColor="#99000000"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/subject3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/subject5"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/intrattenimento"
        android:background="@drawable/rounded_border_background"
        android:textSize="25sp"
        android:textColor="#99000000"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/subject4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/subject6"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/scienze"
        android:background="@drawable/rounded_border_background"
        android:textSize="25sp"
        android:textColor="#99000000"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/subject5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>