<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_border_vittoria"
    android:layout_marginBottom="5dp"
    android:layout_marginStart="1dp"
    android:layout_marginEnd="1dp">
    <TextView
        android:id="@+id/textViewPartita"
        android:layout_width="0dp"
        android:layout_height="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/NomeAvversario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_avversario"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />
    <TextView
        android:id="@+id/scoreTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:gravity="center"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NomeAvversario"
        />
    <TextView
        android:id="@+id/scoreTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trattino"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/scoreTextView1"
        app:layout_constraintEnd_toStartOf="@+id/scoreTextView3"
        app:layout_constraintTop_toBottomOf="@+id/NomeAvversario" />
    <TextView
        android:id="@+id/scoreTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:gravity="center"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NomeAvversario"
        />
    <TextView
        android:id= "@+id/modalita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="aaaaaaaaaaaaaa"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#74FFFFFF"
        android:padding="1dp"
        />
    <TextView
        android:id="@+id/ritiratoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ritirato"
        android:textStyle="bold"
        android:visibility="invisible"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NomeAvversario" />
</androidx.constraintlayout.widget.ConstraintLayout>
 